[package]
name = "launchpad-locked-tokens-and-guaranteed-tickets"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.launchpad-common]
path = "../launchpad-common"

[dependencies.launchpad-locked-tokens]
path = "../launchpad-locked-tokens"

[dependencies.launchpad-guaranteed-tickets]
path = "../launchpad-guaranteed-tickets"

[dependencies.dharitri-sc]
version = "=1.15.4"

[dependencies.dharitri-sc-modules]
version = "=1.15.4"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-meta-lib]
version = "=1.15.4"

[dev-dependencies.dharitri-sc-scenario]
version = "=1.15.4"
