[package]
name = "launchpad-guaranteed-tickets-v2-meta"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[dependencies.launchpad-guaranteed-tickets-v2]
path = ".."

[dependencies.dharitri-sc]
version = "=1.15.4"

[dependencies.dharitri-sc-meta-lib]
version = "=1.15.4"
