[package]
name = "launchpad-migration-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[dependencies.launchpad-migration-guaranteed-tickets]
path = ".."

[dependencies.dharitri-sc]
version = "=1.15.4"
#path = "C:/Users/tejas/Downloads/my_works-main/my_works-main/rs-sdks/drt-rs-sdk-0.54.2/framework/base"

[dependencies.dharitri-sc-meta-lib]
version = "=1.15.4"
#path = "C:/Users/tejas/Downloads/my_works-main/my_works-main/rs-sdks/drt-rs-sdk-0.54.2/framework/meta-lib"
