[package]
name = "launchpad-nft-and-guaranteed-tickets-meta"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[dependencies.launchpad-nft-and-guaranteed-tickets]
path = ".."

[dependencies.dharitri-sc]
version = "=1.15.4"

[dependencies.dharitri-sc-meta-lib]
version = "=1.15.4"
